RESOLVED FIXED231910
DumpRenderTree should not use WK methods
https://bugs.webkit.org/show_bug.cgi?id=231910
Summary DumpRenderTree should not use WK methods
Yusuke Suzuki
Reported 2021-10-18 13:39:37 PDT
DumpRenderTree should not use WK methods
Attachments
Patch (3.05 KB, patch)
2021-10-18 13:41 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-10-18 13:41:42 PDT
EWS
Comment 2 2021-10-19 09:41:37 PDT
Committed r284462 (243222@main): <https://commits.webkit.org/243222@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441638 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-19 09:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.