DumpRenderTree should not use WK methods https://bugs.webkit.org/show_bug.cgi?id=231910

Reviewed by Alex Christensen.

DumpRenderTree functions can be called on WebThread if ios simulator is used.
If we first use WK functions on that, it causes WebKit initialization on non
main thread. We should not mix WK functions with DumpRenderTree.

* DumpRenderTree/mac/DumpRenderTree.mm:
(dumpFramesAsText):


Canonical link: https://commits.webkit.org/243222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284462 268f45cc-cd09-0410-ab3c-d52691b4dbfc